<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iPhoenix</string>
    <string name="nothing" />
    <string name="log_out">Log out</string>
    <string name="change_pwd">Change Password</string>
    <string name="scroe">Scroe</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="save_password">Auto Login</string>
    <string name="login_succeed">Login succeed</string>
    <string name="connect_server_fail">connect server fail</string>
    <string name="server_busy">server is busy, retry other moment</string>
    <string name="get_device_fail">get devices fail</string>
    <string name="domain_error">domain error</string>
    <string name="user_info_error">user info error</string>
    <string name="create_connection_error">create connection error</string>
    <string name="device_remain_zero">device remain zero</string>
    <string name="no_device_online">no device online</string>
    <!-- Server List -->
    <string name="device_list_title">device list</string>
    <string name="device_list_root_button">device list</string>
    <string name="menu_liveview">Live</string>
    <string name="start_preview_num">start(%d)</string>
    <string name="pull_to_refresh_tap_label">refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">loading&#8230;</string>
    <string name="device_list_start_load">start</string>
    <string name="last_refresh_time">last time：</string>
    <string name="pull_to_refresh_pull_label">aaaaa</string>
    <string name="device_title_left">Close</string>
    <string name="device_title_right">All</string>
    <!-- Live -->
    <string name="live_preview_title">Live</string>
    <string name="review_capture_title">Review capture</string>
    <string name="review_record_title">Review record</string>
    <string name="live_resolution_high">better</string>
    <string name="live_resolution_normal">normal</string>
    <string name="score_title">score</string>
    <string name="score_second_title">Please choose one item you want us to improve:</string>
    <string name="score_item_1">function</string>
    <string name="score_item_2">user experience</string>
    <string name="score_item_3">color</string>
    <string name="your_opinion">your opinion</string>
    <string name="settings_nav">Settings</string>
    <!-- upload_list -->
    <string name="upload_list_title">cloud</string>
    <string name="user_title">User Info</string>
    <string name="goto_mark">goto mark</string>
    <string name="user_name">user name</string>
    <string name="user_ip">IP</string>
    <string name="user_log_out">log out</string>
    <string name="score_value_text">Score: </string>
    <string name="score_confirm">Upload</string>
    <string name="toast_reach_max">reach max</string>
    <string name="toast_already_selected">already added in other window</string>
    <string name="exit_alert_title">Alert</string>
    <string name="exit_alert_message">Confirm to exit?</string>
    <string name="video_source_playing">playing</string>
    <string name="search_folder_status">open</string>
    <string name="sdCard_Unmounted">SD card unmounted</string>
    <string name="check">Check</string>
    <string name="check_capture">Capture succeed</string>
    <string name="check_record">Check record</string>
    <string name="capture_failed">Capture failed</string>
    <string name="preview_failed">%splay failed</string>
    <string name="login_failed">Login failed, please check the account, password and IP address. Or online users reached the maximum.</string>
    <string name="update_title">Update</string>
    <string name="update_message">New version is found, go to update?</string>
    <string name="version_error">Obtain wrong version code</string>
    <string name="get_device_failed">Get device fail.</string>
    <string name="get_group_fail">Get group fail.</string>
    <string name="heart_beat_error">Heart error</string>
    <string name="choose_review_time">Choose review time</string>
    <string name="start_review_time">Start review:</string>
    <string name="start_review">Start review</string>
    <string name="time_pick_done_string">Done</string>
    <string name="start_time_string">Start time</string>
    <string name="no_device_is_selected">Not any device has been selected</string>
    <string name="device_offline_while_recording">Device offline while recording</string>
    <string name="search_record_fail">Search record fail</string>
    <string name="send_hint">say something hear</string>
    <string name="last_search_not_finish">last search not finish.</string>
    <string name="search_error">Search Fail, ErrorCode: %s</string>
    <string name="system_version_warning">the version of os is too low.</string>
    <!-- other error -->
    <string name="error_61005">fail to get GBID of device</string>
    <string name="error_61007">fail to get URL</string>
    <string name="error_61100">no video data</string>
    <string name="error_61901">mss unknown error</string>
    <string name="old_password">Origin Password: </string>
    <string name="new_password1">New Password: </string>
    <string name="new_password2">Confirm Password: </string>
    <string name="wrong_password">Origin passowrd is wrong!</string>
    <string name="not_same_new_password">New password not match!</string>
    <string name="password_not_valid">New password is not valid!</string>
    <string name="change_password_hint">Password must contains letters and number</string>
    <string name="password_change_succ">Password changed</string>
    <string name="password_change_fail">Password cant changed</string>
    <string name="password_equ">New passowrd cant equal with origin password</string>
    <string name="all">all</string>
    <string name="only_online">only online</string>
    <string name="online_first">online first</string>
    <string name="open_soft_dec">hardware decoder</string>
    <string name="ad_hw_dec">if the video is not smooth, try to open hw decoding in settings.</string>
    <string name="select_vision">select vision</string>
    <string name="select_rec_src">select record source</string>
    <string name="rec_src_device">Device</string>
    <string name="rec_src_plat">Platfrom</string>
    <string name="get_domain_list_error">Get Platform Domain List Error: </string>
    <string name="default_tree_name">System Tree</string>
    <string name="title_activity_vision_select">VisionSelectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="device_offline">Device %s offline</string>
</resources>
