<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/user_item_bg_normal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:text="@string/score_value_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/favorite_on" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/favorite_on" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/favorite_on" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/favorite_on" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/favorite_on" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:background="@drawable/user_item_bg_normal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:paddingLeft="10dip"
            android:text="@string/score_second_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/scroe_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:text="@string/score_item_1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/scroe_item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:text="@string/score_item_2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/scroe_item_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:text="@string/score_item_3"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/opinion"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:layout_margin="5dip"
            android:background="@drawable/score_edit_bg"
            android:gravity="top"
            android:hint="@string/your_opinion"
            android:paddingTop="5dip"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/style_user_button" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="5dip"
            android:text="@string/score_confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>