<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/titlebar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/navigation_line" />
    
    <LinearLayout
        android:id="@+id/change_pwd_edit_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_hint"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />
            
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/change_pwd_edit_bg" 
            android:layout_marginBottom="10dp" >
            <TextView
                android:id="@+id/old_pwd_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:text="@string/old_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="fill" />"
            
            <EditText
	            android:id="@+id/edit_old_password"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:inputType="textPassword"
	            android:singleLine="true"
	            android:background="@null"
	            android:textColor="@drawable/style_login_edit_text"
	            android:textCursorDrawable="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/change_pwd_edit_bg" 
            android:layout_marginBottom="10dp" >
            <TextView
                android:id="@+id/new_pwd1_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:text="@string/new_password1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center_vertical|right" />
            
            <EditText
                android:id="@+id/edit_new_password1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:background="@null"
                android:textColor="@drawable/style_login_edit_text"
                android:textCursorDrawable="@null" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/change_pwd_edit_bg" 
            android:layout_marginBottom="10dp" >
            <TextView
                android:id="@+id/new_pwd2_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:text="@string/new_password2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="fill" />
            
            <EditText
                android:id="@+id/edit_new_password2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:background="@null"
                android:textColor="@drawable/style_login_edit_text"
                android:textCursorDrawable="@null" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>